--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,101 @@
 html, body {
-    background: gray;
+    background: black;
+    margin: 0 auto;
 }
+.header {
+    width: 100vw;
+    height: 60px;
+    background: transparent;
+    position: fixed;
+    font-family: "Josefin Sans", sans-serif;
+    top: 30px;
+    left: 0px;
+}
+.headerLogo {
+    height: 60px;
+    width: 120px;
+    display: inline-block;
+    float: left;
+    position: relative;
+    opacity: .3;
+    left: 30px;
+    transition: .2s ease;
+    background-size: cover;
+    background-image: url("/Users/anthonygoldsworthy/Documents/GitHub/anthonygoldsworthy.github.io/Assets/Goldsworthy Logo.png");
+}
+.headerLogo:hover {
+    height: 60px;
+    width: 120px;
+    transition: .2s ease;
+    display: inline-block;
+    float: left;
+    position: relative;
+    opacity: .6;
+    left: 30px;
+    background-size: cover;
+    background-image: url("/Users/anthonygoldsworthy/Documents/GitHub/anthonygoldsworthy.github.io/Assets/Goldsworthy Logo.png");
+}
+#navItem {
+    color: rgba(0,0,0,0.3);
+    transition: .2s ease;
+}
+#navItem:hover {
+    color: rgba(0,0,0,0.6);
+    transition: .2s ease;
+}
+.headerNav {
+    height: 60px;
+    font-size: 40px;
+    line-height: 70px;
+    display: inline-block;
+    float: right;
+    position: relative;
+    color: rgba(0,0,0,0.3);
+    opacity: 1;
+    right: 30px;
+}
+.navSlash {
+    display: inline;
+}
+.section1 {
+    height: 100vh;
+    width: 100vw;
+    background: #E84104;
+    color: white;
+}
+.section1Head {
+    color: rgba(0,0,0,0.3);
+    font-size: 150px;
+    font-family: "Josefin Sans", sans-serif;
+    height: 100vh;
+    text-align: center;
+    line-height: 100vh;
+    font-weight: bold;
+    width: 100vw;
+}
+.section2 {
+    height: 100vh;
+    width: 100vw;
+    background: #FFC604;
+    color: white;
+}
+.section3 {
+    height: 100vh;
+    width: 100vw;
+    background: #F880FF;
+    color: white;
+}
+.section4 {
+    height: 100vh;
+    width: 100vw;
+    background: #0426E8;
+    color: white;
+}
+.section5 {
+    height: 100vh;
+    width: 100vw;
+    background: #04FFC5;
+    color: white;
+}
+
+
