--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
 html, body {
-    background: black;
+    background: white;
     margin: 0 auto;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
 }
 .header {
+    z-index: 100;
     width: 100vw;
     height: 60px;
     background: transparent;
@@ -58,44 +62,42 @@ html, body {
     display: inline;
 }
 .section1 {
+    overflow: hidden;
     height: 100vh;
     width: 100vw;
     background: #E84104;
     color: white;
 }
-.section1Head {
-    color: rgba(0,0,0,0.3);
-    font-size: 150px;
-    font-family: "Josefin Sans", sans-serif;
-    height: 100vh;
-    text-align: center;
-    line-height: 100vh;
-    font-weight: bold;
-    width: 100vw;
+@keyframes Spin {
+    0% {
+        transform: rotate(0deg) scale(1.3);
+    }
+    100% {
+        transform: rotate(360deg) scale(1.3);
+    }
 }
-.section2 {
+.spinner {
     height: 100vh;
-    width: 100vw;
-    background: #FFC604;
-    color: white;
-}
-.section3 {
-    height: 100vh;
-    width: 100vw;
-    background: #F880FF;
-    color: white;
-}
-.section4 {
-    height: 100vh;
-    width: 100vw;
-    background: #0426E8;
-    color: white;
-}
-.section5 {
-    height: 100vh;
-    width: 100vw;
-    background: #04FFC5;
-    color: white;
+    max-width: 100%;
+    position: absolute;
+    animation-name: Spin;
+    animation-duration: 25s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    top: 0;
+    left: 0;
+    right: 0;
+    opacity: .6;
+    margin: auto;
 }
 
-
+.splash {
+    height: 100vh;
+    filter: grayscale(1);
+    max-width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
