--- a/styles.css
+++ b/styles.css
@@ -656,15 +656,15 @@ a {
 
 .leftBody1 {
     border-radius: 20px;
-    height: 35vw;
     width: 28vw;
     left: 1vw;
-    margin-left: -2px;
+    margin-left: -2px; 
     position: relative;
     border: 2px solid black;
     background: rgb(255, 0, 114);
     background: linear-gradient(328deg, rgba(255, 0, 114, 1) 0%, rgba(255, 94, 94, 1) 100%);
     margin-bottom: 0vh;
+    padding-bottom: 2.25vw
 }
 
 .leftBody2 {
@@ -680,9 +680,12 @@ a {
     background: white;
 }
 
+
+
 .albumGridItem {
-    height: calc(100% - 1vw);
-    width: calc(100% - 1vw);
+    width: 100%;
+    height: 100%;
+    transform: scale(.9);
     margin: 0 auto;
     border-radius: 10px;
     border-spacing: 0;
