--- a/styles.css
+++ b/styles.css
@@ -684,7 +684,7 @@ a {
 
 .albumGridItem {
     width: 100%;
-    height: 100%;
+    height: inherit;
     transform: scale(.9);
     margin: 0 auto;
     border-radius: 10px;
